# uspeakitype

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEBT.md  Dockerfile  EXPERIMENT.md  HeyGreg.md  LICENSE  README.md  WATERFALL_COLORS_SUMMARY.md  build.rs  docker-compose.yml  phase2-results.md  spike-results.md
cpp/: bridge.cpp  bridge.h
doc/: README.md  audio-input-policy.md  bridge-to-moonshine-voice.md  cargo-check-cleanup.md  crazyideas-findings.md  crazyideas.md  input-backends.md  qt-quick-container-concept.md  qt-widgets-frontend.md  runtime-operations.md  testing-visual.md  trine.md  ui-contracts.md  ui4real-plan.md  upstream-audit-2026-03.md  usit-qt-tranches.md
doc/idea/nascent/: corpus-and-retention.md
doc/ideas/nascent/: model-commitment-and-rl.md  uncertainty-surface.md
docker/kde/: Dockerfile  test-audio.sh  test-kde.sh
docs/: README.md  audio-input-policy.md  kde-plasma-posture.md  model-lifecycle.md  nemo-tdt-onnx-workflow.md  qt-quick-container-concept.md  testing-visual.md  ui-contracts.md
docs/ideas/nascent/: README.md
example/: usit.desktop  widget_test.rs
example/qt_quick_overlay/: ActionButton.qml  Main.qml  README.md  TranscriptPanel.qml
examples/: spectrogram_spike.rs  widget_test.rs
examples/qt_quick_overlay/: ActionButton.qml  ControlDrawer.qml  DrawerSwitch.qml  Main.qml  README.md  SpectrogramViewport.qml  StatusChip.qml  TranscriptPanel.qml
experiment/: README.md
experiment/nuxglit/: build.rs
experiment/nuxglit/cpp/: bridge.h
experiments/: README.md
experiments/common/: protocols.md
experiments/hellnuxit/: Cargo.toml  README.md  build.rs
experiments/hellnuxit/cpp/: bridge.cpp  bridge.h
experiments/hellnuxit/src/: main.rs
experiments/nucit/: .gitignore  README.md  build.sh
experiments/nucit/rust_worker/: Cargo.toml
experiments/nucit/rust_worker/src/: main.rs
experiments/nucit/shell/: main.cpp  nucit.pro
experiments/nusit/: .gitignore  README.md  build.sh
experiments/nusit/rust_helper/: Cargo.toml
experiments/nusit/rust_helper/src/: main.rs
experiments/nusit/shell/: main.cpp  nusit.pro
experiments/nuxglit/: Cargo.toml  README.md
experiments/nuxglit/cpp/: bridge.cpp  bridge.h
experiments/nuxglit/src/: main.rs
experiments/nuxxit/: .gitignore  Cargo.toml  README.md  build.rs
experiments/nuxxit/qml/: main.qml
experiments/nuxxit/src/: level_object.rs  main.rs
experiments/shared_memory_bridge/: README.md  build.sh  protocol.md  run_demo.sh
experiments/shared_memory_bridge/qt_shell/: main.cpp  usit-shm-shell.pro
experiments/shared_memory_bridge/rust_helper/: Cargo.toml
experiments/shared_memory_bridge/rust_helper/src/: main.rs
fcitx5-usit-bridge/: CMakeLists.txt
fcitx5-usit-bridge/src/: CMakeLists.txt  usitbridge.conf.in  usitbridge.cpp
oldcrap/: Cargo.toml  README.md
oldcrap/qt_widgets_overlay/: README.md  usit_qt_overlay.pro
oldcrap/src/: main.rs
oldcrap/src/ui/: app.rs  text_renderer.rs
oldcrap/test/: audio_capture.rs  injection_flow.rs  transcription.rs
oldcrap/test/visual/: wgpu_harness.rs
qt_widgets_overlay/: main.cpp
script/: audio_analyze.py  docker-ime-test.sh  docker-visual-tests.sh  fcitx5-wayland-launcher.desktop.in  install-fcitx5-bridge-dev.sh  requirements.txt  tag-version.sh  wav_to_samples.py
scripts/: build-qt-overlay.sh  docker-test.sh  docker-visual-tests.sh  tag-version.sh  wer_eval.py
src/: ansi.rs  config.rs  cpl.rs  download.rs  inject.rs  instance.rs  lib.rs  logging.rs  main.rs  model_cache.rs  spectrum.rs  streaming.rs
src/audio/: capture.rs  mod.rs  vad.rs
src/backend/: mod.rs  moonshine.rs  nemo_transducer.rs
src/input/: fcitx5_bridge.rs  input_method.rs  kwtype.rs  mod.rs  wrtype.rs  ydotool.rs
src/ui/: AGENTS.md  app.rs  control_panel.rs  icon.rs  mod.rs  qt_external.rs  renderer.rs  spectrogram.rs  spectrogram_widget.rs  status_widget.rs  terminal.rs  text_renderer.rs  theme.rs  transcript_widget.rs  waterfall_widget.rs
src/ui/assets/: CHANGELOG.md
src/ui/shaders/: icon.wgsl  panel_bg.wgsl  rounded_rect.wgsl  spectrogram.wgsl
test/: tui_harness.rs
test/visual/: README.md  comparison.rs
test/visual/fixture/: README.md
test/visual/golden/: README.md
test/visual/script/: capture_goldens.sh
tests/: injection_flow.rs  input_method_tests.rs  transcription.rs  tui_harness.rs  tui_size_matrix.rs  visual_tests.rs
tests/visual/: CAPTURE_VALIDATION.md  README.md  mod.rs  screenshot.rs  wgpu_harness.rs
tests/visual/fixtures/: README.md
tests/visual/golden/: README.md
tests/visual/scripts/: capture_goldens.sh  transparency_test.sh
