[package]
name = "uspeakitype"
version = "0.2.11"
edition = "2021"
description = "Streaming ASR with live revision"
license = "MIT"
authors = ["Greg Turner <gmt@be-evil.net>"]
default-run = "usit"

[lib]
name = "usit"
path = "src/lib.rs"

[[bin]]
name = "usit"
path = "src/main.rs"

[[bin]]
name = "wav_stream"
path = "src/bin/wav_stream.rs"

[[example]]
name = "widget_test"
path = "examples/widget_test.rs"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.17"
winit = { version = "0.31.0-beta.2", git = "https://github.com/SergioRibera/winit", branch = "layer_shell" }
wgpu = "28"
glyphon = "0.10.0"
bytemuck = { version = "1.18.0", features = ["derive"] }
smithay-client-toolkit = "0.20.0"
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
zbus = "5.0"
tokio = { version = "1.43.0", features = ["full"] }
parking_lot = "0.12.1"
anyhow = "1.0.97"
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
tokenizers = "0.22"
pollster = "0.4.0"
rustfft = "6.4.1"
pipewire = "0.9.2"
hound = "3.5"
terminal_size = "0.4.1"
supports-unicode = "3.0.0"
crossterm = "0.28"
ctrlc = "3.4"
ratatui = "0.30.0"
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
dirs = "5.0"
wrtype = "0.1"
resvg = "0.44"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = "2"

[dev-dependencies]
tempfile = "3.10"
portable-pty = "0.8"
vt100 = "0.15"
image_hasher = "3.1"
image = "0.25"
serial_test = "3.3.1"

[features]
default = []
ort-cuda = ["ort/cuda"]
