[package]
name = "uspeakitype"
version = "0.2.22"
edition = "2021"
description = "Streaming ASR with live revision"
license = "MIT"
authors = ["Greg Turner <gmt@be-evil.net>"]
default-run = "usit"
autobins = false

[[bin]]
name = "usit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
env_logger = "0.11.8"
log = "0.4.29"
parking_lot = "0.12.5"
pipewire = "0.9.2"
rustfft = "6.4.1"

[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = "2"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
