[package]
name = "uspeakitype"
version = "0.2.25"
edition = "2021"
description = "Streaming ASR with live revision"
license = "MIT"
authors = ["Greg Turner <gmt@be-evil.net>"]
default-run = "usit"
autobins = false

[[bin]]
name = "usit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
dirs = "6.0.0"
ndarray = "0.17"
env_logger = "0.11.8"
log = "0.4.29"
ort = { version = "=2.0.0-rc.11", features = ["ndarray"] }
parking_lot = "0.12.5"
pipewire = "0.9.2"
futures-util = "0.3"
reqwest = { version = "0.13.2", default-features = false, features = ["stream", "rustls"] }
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokenizers = "=0.22.2"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
toml = "0.9.8"
zbus = "5.13.1"

[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = "2"

[dev-dependencies]
tempfile = "3.24.0"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
